--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  
-  <!--  Meta  -->
-  <meta charset="UTF-8" />
-  <title>Bodymovin Demo</title>
-  
-  <!--  Styles  -->
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  
-  <div id="bm"> </div>
-  
-  <!-- Scripts -->
-  <script src="scripts/bodymovin.js"></script>
-  <script src="scripts/index.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player 
-    src="https://assets10.lottiefiles.com/datafiles/uoZvuyyqr04CpMr/data.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"   autoplay >
-</lottie-player>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width initial-scale=1 user-scalable=no"
+    />
+    <title>Spectacle Boilerplate</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="./dist/bundle.js"></script>
+  </body>
 </html>
